COR-624 | feat: initial apm implementation (still plenty to configure)